fix overflow

--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -71,6 +71,7 @@
     width: 95%;
     height: 32px;
     line-height: 34px
+    overflow:hidden;
 }
 .tips{
     font-size: 10px;
